K8S-Manifest_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
    template:
      metadata:
        labels:
          app: my-app
    spec:
      containers:
      - name: my-container
        image: my-image:latest
        ports:
        - containePort: 8080
