K8S-Manifest_files/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
     name: my-app
spec:
     replicas: 3
     selector:
       matchLabels:
         app: my-app
     template:
       metadata:
         labels:
           app: my-app
       spec:
         containers:
         - name: my-container
           image: my-image:latest
           ports:
           - containerPort: 8080
