K8S-Manifest_files/init-containers.yaml
#This is sidecar container

apiVersion: v1 
kind: Pod
metadata:
  name: init-container
spec:
  containers:
  - name: main-container
    image: main-image
