K8S-Manifest_files/pod-secret.yaml
## Using a secret in POD using environmenta variables
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mycontainer
    image: nginx
