K8S-Manifest_files/service-account.yaml
#This is the service ccount file

apiVersion: v1
kind: Pod
metadata: 
  name: my-service-account
spec:
  serviceAccountName: my-service-account 
  containers:
    - name: my-container 
      image: nginx
