K8S-Manifest_files/volumes.yaml
#Assign the volume to PODs
apiVersion: v1 
kind: Pod
metadata:
  name: my-pod-volume
spec:
  containers:
  - name: my-container 
    image: nginx
  volumeMounts:
  - name: my-volume
    mountPath: /path/to/mount
  volumes:
  - name: my-volume 
    hostPath:
      path: /host/path
