K8S-Manifest_files/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
 name: my-app-service
spec:
selector:
 app: my-app
ports:
- protocol: TCP
  port: 80
  targetPort: 8080
type: clusterIP

#Accessing the service "https://clusterip:80"
