K8S-Manifest_files/headless.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: headless-service
spec: 
  clusterIP: none #Setting clusterIP to none makes it a headless service
  selector: 
    app: my-app #select the pods you want to include in the service
  ports:
  - protocol: TCP
    port: 80 #specify the port your pods are listening on
