K8S-Manifest_files/network-policy.yaml
#This is Netwirk policy file
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-app
  ingress:
    -from:
      -podSelector:
        matchLabels:
          role: frontend
